  [Michele Simionato]
  * Reduced the number of tasks generated by `disagg_by_src` and added
    more checks on the naming conventions for the source IDs
  * Fixed the gmf_data exporter with a filtered site collection
  * Added missing validation on duplicate source IDs for source models
    in format nrml/0.5
  * The calculation_mode=ebrisk was not honored when starting from GMFs
  * Fixed an ordering bug in the IMTs causing two peaks in the UHS in
    some situations
  * Fixed bug in the WongEtAl2022 GMPEs, reported by Thomas Bornstein
  * Added a job.ini parameter `smlt_branch` to reduce the logic tree to
    a specific branch
  * Internal: extended `oq info` to shapefiles

  [Anirudh Rao]
  * Fixed the conditioned GMFs calculator in the case all the
    stations are filtered away

  [Marco Pagani]
  * Fixed the algorithm used to generate kite surfaces

  [Michele Simionato]
  * Changed the weighted quantile algorithm to not depend on numpy.argsort
    (since numpy 1.25 argsort produces a different sorting on machines with
    AVX-512 enabled processors, causing different quantiles when the weights
    are not all equal)
  * Improved error message for missing fields in the exposure CSV files
  * Internal: removed dbserver.user in openquake.cfg
  * Fixed `extract_from_zip` when managing zip files coming from MACOSX

  [Paolo Tormene]
  * Internal: extended the MosaicGetter to a GlobalModelGetter class with
    the ability to associate points to countries

  [Michele Simionato]
  * Removed the obsolete `by_country` hack when managing the global exposures
  * Changed `oq sample` to use pandas for reading/writing CSVs, thus fixing
    the issue of quoted newlines
  * Fixed `oq check_input exposure.xml`
  * Added `rupture_dict` parameter to be used in scenarios

  [Marco Pagani]
  * Fixed a bug in the calculation of Rjb for gridded surfaces and added a
    dependency from alpha_shapes

  [Chris di Caprio]
  * Contributed many new GMPEs for the New Zealand model
