@@ -194,6 +194,8 @@ def ensure(pip=None, pyvenv=None):
     """
     try:
         if pyvenv:
+            if os.path.exists(pyvenv):
+                shutil.rmtree(pyvenv)
             venv.EnvBuilder(with_pip=True).create(pyvenv)
         else:
             subprocess.check_call([pip, '-m', 'ensurepip', '--upgrade'])
@@ -364,10 +366,13 @@ def install(inst, version, from_fork):
         if inst is server or inst is devel_server:
             subprocess.check_call(['chown', 'openquake', inst.OQDATA])
 
-    # create the openquake venv if necessary
-    if not os.path.exists(inst.VENV) or not os.listdir(inst.VENV):
-        ensure(pyvenv=inst.VENV)
-        print('Created %s' % inst.VENV)
+    if (os.path.exists(inst.VENV) and
+            'openquake.cfg' in os.listdir(inst.VENV)):
+        sys.exit('Move %s first' % os.path.join(inst.VENV, 'openquake.cfg'))
+
+    # recreate the openquake venv
+    ensure(pyvenv=inst.VENV)
+    print('Created %s' % inst.VENV)
 
     if sys.platform == 'win32':
         if os.path.exists('python\\python._pth.old'):
