@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Changed the universal installer to recreate the venv
   * Reduced the number of tasks generated by `disagg_by_src` and added
     more checks on the naming conventions for the source IDs
   * Fixed the gmf_data exporter with a filtered site collection
